poc/tests/errors/test_FplMalformedGlobalId_constructor_is_ok.fpl
TestNamespace
{
    theory
    {
        class Nat: obj
        {
            Nat(x: Int)
            {
                case
                (
                    IsGreaterOrEqual(x.RightMember(), x.LeftMember()):
                        self:=x.RightMember()
                    else:
                        self:=undefined
                )
            }
        }
    }
}

##############################

FplMalformedGlobalId